# PLA

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
pla/: pla.h
pla/tests/: addition.cpp  copy.cpp  linear_algebra_addition_tests.cpp  linear_algebra_mat_mul_vec_tests.cpp  linear_algebra_min_max_tests.cpp  linear_algebra_misc_tests.cpp  linear_algebra_tests.cpp  misc.cpp  norm.cpp  normalizing.cpp  quaternion.cpp  scaling.cpp  subtraction.cpp  vector_inner_multiplication.cpp
src/: linear_algebra.h
src/tests/: linear_algebra_addition_tests.cpp  linear_algebra_copy_tests.cpp  linear_algebra_mag_tests.cpp  linear_algebra_mat_mul_mat_tests.cpp  linear_algebra_mat_mul_vec_tests.cpp  linear_algebra_min_max_tests.cpp  linear_algebra_misc_tests.cpp  linear_algebra_mul_inner_tests.cpp  linear_algebra_norm_tests.cpp  linear_algebra_normalize_tests.cpp  linear_algebra_scalar_tests.cpp  linear_algebra_subtraction_tests.cpp  linear_algebra_tests.cpp
